<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.android.justjava.MainActivity">

        <EditText
            style="@style/HeaderStyle"
            android:id="@+id/username_box"
            android:layout_marginBottom="16dp"
            android:hint="@string/user_name_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings_title"
            android:textSize="16sp"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/whipped_cream"
            android:paddingLeft="24dp"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/chocolate"
            android:paddingLeft="24dp"/>

        <TextView
            style="@style/HeaderStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/decrease_qty" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/quantity"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/increase_qty" />


        </LinearLayout>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text=""-->
            <!--android:textAllCaps="true" />-->

        <!--<TextView-->
            <!--android:id="@+id/order_summary_text_view"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text=""-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="16sp" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order_button" />

    </LinearLayout>
</ScrollView>

